--- a/app/styles/page.css
+++ b/app/styles/page.css
@@ -5,6 +5,9 @@ body {
     padding: 0;
     font-family: 'Bree Serif', sans-serif;
     display: flex;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
 
 * {
@@ -28,8 +31,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(50px) saturate(2.5);
     z-index: 0;
@@ -82,7 +85,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    
 
 
     font-style: normal;
@@ -144,7 +147,7 @@ body {
     width: 200px;
     height: 50px;
     background: #ffffff;
-    border-radius: 10px;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -194,24 +197,44 @@ body {
     transition: all 0.3s;
     }
 
-.warning{
-    display: none;
-}
 
 @media screen and (max-width: 900px) {
-    .warning{
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-family: JetBrains Mono;
-        font-style: normal;
-        font-weight: 100;
-        font-size: 30px;
-        line-height: 26px;
-        color: #ffffff;
-        text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+    .cover{
+        scale: 0.8;
+    }
+
+    .top{
+        font-size: 25px;
+        transform: scale(0.9);
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .info{
+        display: none;
     }
     
+    .page {
+        height: 100dvh;
+        position: fixed;
+        overflow-y: clip;
+        overflow-x: clip;
+        -webkit-overflow-scrolling: auto;
+    }
+}
+.time{
+    font-family: JetBrains Mono;
+    font-style: normal;
+    font-weight: 100;
+    line-height: 26px;
+    color: #ffffff;
+    text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+}
+.progress{
+    width: 200px;
+    height: 8px;
+    border-radius: 1000px;
+    filter: blur(1px);
 }
